<resources>
    <string name="app_nameold" translatable="false">Banco de Tiempo</string>
    <string name="registroBDT" translatable="false">Registrarse con BDT</string>
    <string name="registroFB" translatable="false">Registrarse con Facebook</string>
    <string name="registroG" translatable="false">Registrarse con Google</string>
    <string name="iniciarsesion" translatable="false">Iniciar Sesión</string>
    <string name="bienvenida" translatable="false">Banco de Tiempo</string>
    <string name="logoBDT" translatable="false">Reloj de bienvenida</string>
    <string name="nombreLogin" translatable="false">Nombre</string>
    <string name="passwordLogin" translatable="false">Contraseña</string>
    <string name="registroReg" translatable="false">Registro</string>
    <string name="registroTeryPol" translatable="false">Acepto las condiciones de uso y la política de privacidad.</string>
    <string name="username" translatable="false">Usuario</string>
    <string name="correo" translatable="false">Correo</string>
    <string name="confirmaContra" translatable="false">Confirma contraseña</string>
    <string name="registrarse" translatable="false">Regístrate</string>
    <string name="regcontinuar" translatable="false">Continuar</string>
    <string name="regFoto" translatable="false">¡Elije una\n foto de\n perfil!</string>
    <string name="nombreUsuario" translatable="false">Nombre de Usuario</string>
    <string name="datosUsuario" translatable="false">Datos del Usuario</string>
    <string name="documentosUsuario" translatable="false">Documentos / Certificados</string>
    <string name="apellidoMaterno" translatable="false">Apellido Materno</string>
    <string name="apellidoPaterno" translatable="false">Apellido Paterno</string>
    <string name="ciudad" translatable="false">Ciudad</string>
    <string name="direccion" translatable="false">Direccion</string>
    <string name="calle" translatable="false">Calle</string>
    <string name="numInt" translatable="false">Número Interno</string>
    <string name="municipio" translatable="false">Municipio</string>
    <string name="codigoPostal" translatable="false">Código Postal</string>
    <string name="colonia" translatable="false">Colonia</string>
    <string name="estado" translatable="false">Estado</string>
    <string name="nombres" translatable="false">Nombre(s)</string>
    <string name="nacimiento" translatable="false">Nacimiento</string>
    <string name="busquedaFiltro" translatable="false">Ingresa una Categoría</string>
    <string name="topCategorias" translatable="false">Top Categorías</string>
    <string name="ine" translatable="false">INE *</string>
    <string name="comprobanteDomicilio" translatable="false">Comprobante de Domicilio *</string>
    <string name="certificado" translatable="false">Certificado</string>
    <string name="cartaPenal" translatable="false">Carta de Antecendentes no Penales *</string>
    <string name="eligeDoc" translatable="false">Elige Documento...</string>
    <string name="ruta" translatable="false">Estado de carga</string>
    <string name="upload" translatable="false">Subir</string>
    <string name="nomOfer" translatable="false">Nombre de la oferta</string>
    <string name="trabajo" translatable="false">Tipo de trabajo</string>
    <string name="ubicacion" translatable="false">Ubicacion</string>
    <string name="descripcion" translatable="false">Breve descripcion de la oferta.</string>
    <string name="imgoferta" translatable="false">Imagen de la oferta</string>
    <string-array name="tipoOferta">
        <item>Carpintería</item>
        <item>Repostería</item>
        <item>Panadería</item>
    </string-array>
    <string-array name="ubicacionOferta">
        <item>Coyotepec</item>
        <item>Acolman</item>
        <item>Tenancingo</item>
    </string-array>
    <string name="software" translatable="false">Información de Software</string>
    <string name="terycon" translatable="false">Términos y condiciones</string>
    <string name="legal" translatable="false">Legal</string>
    <string name="faq" translatable="false">Preguntas frecuentes</string>
    <string name="manual" translatable="false">Manual de aplicación</string>
    <string name="calEstrellas" translatable="false">4.7(13)</string>
    <string name="empleo" translatable="false">Carpintero</string>
    <string name="descTrabajo" translatable="false">Descripción de prueba</string>
    <string name="horarios" translatable="false">Horarios Disponibles</string>
    <string name="botonAceptar" translatable="false">Aceptar</string>
    <string name="horario1" translatable="false">Lunes a Viernes de 8:00 a 13:00</string>
    <string name="start" translatable="false">Comenzar</string>
    <string name="validacion" translatable="false">Verificación</string>
    <string name="msgValidacion" translatable="false">Ingresa el código que se envió por correo</string>
    <string name="codigoVeri" translatable="false">Ingresa el código </string>
    <string name="entrar" translatable="false">Entrar</string>
    <string name="nuevoCodigo" translatable="false"><a href="https://www.youtube.com/watch?v=R0H0X0KXzbA">Enviar código nuevamente</a></string>
    <string name="nav_header_desc" translatable="false">Navigation header</string>
    <string name="action_settings" translatable="false">Settings</string>
    <string name="menu_home" translatable="false">Perfil de usuario</string>
    <string name="menu_gallery" translatable="false">Consulta de ofertas</string>
    <string name="menu_slideshow" translatable="false">Registro de ofertas</string>
    <string name="menu_ajustes" translatable="false">Ajustes</string>
    <string name="misOfertas" translatable="false">Mis Ofertas publicadas</string>
    <string name="favoritos" translatable="false">Mis Servicios Favoritos</string>
    <string name="servicioId" translatable="false">Nombre del servicio</string>
    <string name="contacto" translatable="false">Ofertante</string>
    <string name="contratar" translatable="false">Contratar nuevamente</string>
    <string name="horasHacer" translatable="false">Estatus para realizar horas</string>
    <string name="horasR" translatable="false">Estatus para recibir horas</string>
    <string name="title_activity_main" translatable="false">Main_Activity</string>
    <string name="first_fragment_label" translatable="false">First Fragment</string>
    <string name="second_fragment_label" translatable="false">Second Fragment</string>
    <string name="next" translatable="false">Next</string>
    <string name="previous" translatable="false">Previous</string>
    <string name="hello_first_fragment" translatable="false">Hello first fragment</string>
    <string name="hello_second_fragment" translatable="false">Hello second fragment. Arg: %1$s</string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="drawer_open" translatable="false">Open Drawer</string>
    <string name="drawer_close" translatable="false">Close Drawer</string>
    <string name="user_name" translatable="false">Nombre del Usuario</string>
    <string name="pi_detalle" translatable="false">Detalle</string>
    <string name="pi_nombre" translatable="false">José Luis</string>
    <string name="pi_trabajo" translatable="false">Videojuegos</string>
    <string name="pi_imgdesc" translatable="false">Favorito</string>
    <string name="pi_titulo" translatable="false">Ofertas Populares</string>
    <string name="app_name" translatable="false">Banco de Tiempo</string>
    <string name="login_email_hint" translatable="false">Correo</string>
    <string name="login_password_hint" translatable="false">Contraseña</string>
    <string name="accounthave" translatable="false">¿Ya tienes\n una cuenta?</string>
    <string name="passforg" translatable="false">¿Olvidaste tu contraseña?</string>
    <string name="nlogin" translatable="false">Iniciar Sesión</string>
    <string name="nusuar" translatable="false">¿Usuario nuevo? Registrate ahora</string>
    <string name="nforinic" translatable="false">Otras formas</string>
    <string name="registrate" translatable="false">¡Tu primer\n paso con \nnosotros!</string>
    <string name="goback" translatable="false">¿Ya tienes una cuenta?</string>
    <string name="uploadimg" translatable="false">Subir</string>
    <string name="cancelimg" translatable="false">Cancelar</string>
    <string name="selection" translatable="false">¿Confirmar?</string>
    <string-array name="empleos">
        <item>Carpintería</item>
        <item>Plomería</item>
        <item>Sastrería</item>
        <item>Tutoría</item>
        <item>Inglés</item>
        <item>Matemáticas</item>
    </string-array>
    <string-array name="descripciones">
        <item>Descripción de prueba.</item>
        <item>Descripción larga de prueba para ver que quepa en el card View.</item>
        <item>"Agua. Tierra. Fuego. Aire. Hace muchos años, las cuatro naciones vivían en armonía. Pero todo cambió cuando la Nación del Fuego atacó. Sólo el Avatar, maestro de los cuatro elementos, podía detenerlos, pero cuando el mundo más lo necesitaba, desapareció. Después de cien años mi hermano y yo encontramos al nuevo Avatar, un Maestro Aire llamado Aang. Aunque sus habilidades para controlar el aire eran grandiosas, tenía mucho que aprender antes de poder salvar al mundo. Y yo creo que Aang podrá salvarnos. "</item>
        <item>Cruzando la frontera me encontré con el\n
            Era un tipo medio raro pero me cayo bien,\n
            Me dijo viajo en carretera espero pronto\n
            Llegar al rodeo que me espera allá.\n
            Me dijo con certeza que no hay mas emoción\n
            Que romper un sombrero disparar un cañón\n
            Salvar la vida de un jinete cuando mal anda su suerte\n
            Soy payaso de rodeo\n
            Les digo ven, ven, ven, animalito ven,\n
            Ven y sígueme y veras lo que vas a aprender,\n
            No ves que soy muy poco artístico\n
            Muy listo muy gracioso soy payaso de rodeo\n
            Así llevamos largo tiempo luego se marcho,\n
            Dejándome un mensaje que recuerdo hoy\n
            Lo peligroso es gracioso\n
            Lo difícil es hermoso\n
            Lo mas grande es el rodeo\n
            Me dijo con certeza que no hay mas emoción\n
            Que romper un sombrero disparar un cañón\n
            Salvar la vida de un jinete cuando mal anda su suerte\n
            Ser payaso de rodeo\n
            Les digo ven, ven, ven, animalito ven,\n
            Ven y sígueme y veras lo que vas a aprender,\n
            No ves que soy muy poco artístico\n
            Muy listo muy gracioso soy payaso de rodeo.</item>
        <item>Descripción de prueba.</item>
        <item>Descripción de prueba.</item>
    </string-array>
    <string name="profileEmail" translatable="false">prueba@correo.com</string>
    <string name="returnMain" translatable="false">Regresar \n a menú principal</string>
    <string name="correoProf" translatable="false">prueba@correo.mx</string>
    <string name="emailProf" translatable="false">Correo Electrónico</string>
    <string name="usernameProf" translatable="false">Nombre de Usuario</string>
    <string name="nameProf" translatable="false">Nombre</string>
    <string name="verHoras" translatable="false">Verificar\nHoras</string>
    <string name="verDocs" translatable="false">Verificar\nDocumentos</string>
    <string name="estHoras" translatable="false">Estatus Horas</string>
    <string name="estDocu" translatable="false">Estatus Documentos</string>
    <string name="bdt" translatable="false">Banco\nde Tiempo</string>
    <string name="menuTodo" translatable="false">Todo</string>
    <string name="menuAdmin" translatable="false">Administración</string>
    <string name="menuCompu" translatable="false">Computación</string>
    <string name="menuMate" translatable="false">Matemáticas</string>
</resources>