<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingsFragment">

    <Button
        android:id="@+id/btnInfoSoft"
        android:layout_width="340dp"
        android:layout_height="60dp"
        android:layout_marginStart="35dp"
        android:layout_marginTop="110dp"
        android:layout_marginEnd="35dp"
        android:layout_marginBottom="30dp"
        android:backgroundTint="@color/blue_4_btn"
        android:text="@string/software"
        android:textAlignment="textStart"
        android:textAllCaps="false"
        app:layout_constraintBottom_toTopOf="@+id/btnAppMan"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnAppMan"
        android:layout_width="340dp"
        android:layout_height="60dp"
        android:layout_marginStart="35dp"
        android:layout_marginEnd="35dp"
        android:layout_marginBottom="30dp"
        android:backgroundTint="@color/blue_4_btn"
        android:text="@string/manual"
        android:textAlignment="textStart"
        android:textAllCaps="false"
        app:layout_constraintBottom_toTopOf="@+id/btnPregFreq"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnInfoSoft" />

    <Button
        android:id="@+id/btnPregFreq"
        android:layout_width="340dp"
        android:layout_height="60dp"
        android:layout_marginStart="35dp"
        android:layout_marginEnd="35dp"
        android:layout_marginBottom="30dp"
        android:backgroundTint="@color/blue_4_btn"
        android:text="@string/faq"
        android:textAlignment="textStart"
        android:textAllCaps="false"
        app:layout_constraintBottom_toTopOf="@+id/btnLegal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnAppMan" />

    <Button
        android:id="@+id/btnTermYCond"
        android:layout_width="340dp"
        android:layout_height="60dp"
        android:layout_marginStart="35dp"
        android:layout_marginEnd="35dp"
        android:layout_marginBottom="221dp"
        android:backgroundTint="@color/blue_4_btn"
        android:text="@string/terycon"
        android:textAlignment="textStart"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnLegal" />

    <Button
        android:id="@+id/btnLegal"
        android:layout_width="340dp"
        android:layout_height="60dp"
        android:layout_marginStart="35dp"
        android:layout_marginEnd="35dp"
        android:layout_marginBottom="30dp"
        android:backgroundTint="@color/blue_4_btn"
        android:text="@string/legal"
        android:textAlignment="textStart"
        android:textAllCaps="false"
        app:layout_constraintBottom_toTopOf="@+id/btnTermYCond"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnPregFreq" />

</androidx.constraintlayout.widget.ConstraintLayout>